assemblee/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: assemblee
spec:
  replicas: 1
  selector:
    matchLabels:
      app: assemblee
  template:
    metadata:
      labels:
        app: assemblee
    spec:
      containers:
        - name: assemblee
          image: ghcr.io/cngei/assemblee-cngei:63410eec49ccef2ad9a12859cf30bd9d34c65007
          ports:
            - containerPort: 8080
