assemblee/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: assemblee
  namespace: assemblee
  labels:
    app: assemblee
spec:
  ports:
    - name: assemblee-http
      port: 8080
      targetPort: 8080
  selector:
    app: assemblee
  type: LoadBalancer
