assemblee/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: assemblee-ingress
  namespace: assemblee
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`assemblee.cngei.it`)
      services:
        - kind: Service
          name: assemblee
          port: 8080
  tls:
    secretName: assemblee-tls
